fixed alignment issues

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -438,8 +438,9 @@ th {
   border: 1px solid #ccc;
   border-radius: 10px;
   padding: 20px;
-  margin: 10px;
-  width: 300px;
+  margin: 15px;
+  height: 95%;
+  width: 320px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
